<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_light_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@color/accept_btn"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintLeft_toRightOf="@+id/status_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_date" />

        <TextView
            android:id="@+id/teacher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/teacher_time"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintLeft_toRightOf="@+id/teacher_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teacher_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintLeft_toRightOf="@+id/time_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_name" />

        <TextView
            android:id="@+id/teacher_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/teacher_time"
            android:layout_alignBottom="@+id/teacher_time"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintLeft_toRightOf="@+id/day_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_time" />

        <TextView
            android:id="@+id/teacher_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/teacher_time"
            android:layout_alignStart="@+id/teacher_time"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintLeft_toRightOf="@+id/date_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_day" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/teacher_image"
            app:layout_constraintTop_toBottomOf="@+id/teacher_name" />

        <TextView
            android:id="@+id/day_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/day"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/teacher_image"
            app:layout_constraintTop_toBottomOf="@+id/time_label" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/teacher_image"
            app:layout_constraintTop_toBottomOf="@+id/day_label" />

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/teacher_image"
            app:layout_constraintTop_toBottomOf="@+id/date_label" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/teacher_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/handshake"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/accept_teacher"
            style="@android:style/Widget.Button.Toggle"
            android:layout_width="87dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_green_dark"
            android:elevation="@dimen/activity_horizontal_margin"
            android:text="@string/accept"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_label"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/reject_teacher"
            style="@android:style/Widget.Button.Toggle"
            android:layout_width="87dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_red_dark"
            android:elevation="@dimen/activity_horizontal_margin"
            android:text="@string/reject"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintLeft_toRightOf="@+id/accept_teacher"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
    >

</android.support.v7.widget.CardView>